--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ h1 {
     color: black;
     text-align: center;
     font-weight: bold;
-    background-color: green;
+    background-color: #50A8AF;
 }
 
 p {
