--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,19 @@ ul {
     overflow: auto;
 }
 
-li a {
+li item {
     display: block;
-    color: #000;
+    color: #FFFFFF;
     padding: 8px 16px;
     text-decoration: none;
 }
 
-li a.active {
+li item.active {
     background-color: #50A8AF;
     color: white;
 }
 
-li a:hover:not(.active) {
+li item:hover:not(.active) {
     background-color: #af5750;
     color: white;
 }
