--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-color: #b0bdbf;
+    background-color: #5A5A5A;
 }
 
 ul {
@@ -8,7 +8,7 @@ ul {
     margin: 0;
     padding: 0;
     width: 20%;
-    background-color: #80;
+    background-color: #7a7a7a;
     position: fixed;
     height: 100%;
     overflow: auto;
