--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h2 {
     color: black;
     text-align: center;
     font-weight: bold;
-    border: 5px #50A8AF;
+    background-color: #50A8AF;
 }
 
 p {
