--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h2 {
     color: black;
     text-align: center;
     font-weight: bold;
-    background-color: #50A8AF;
+    background-color: rgba(80, 168, 175, 0.5);
 }
 
 p {
