--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,10 @@ h2 {
     text-align: center;
     font-weight: bold;
     background-color: rgba(80, 168, 175, 0.5);
+    font-family: "Arial", Arial, Sans-serif;
 }
 
 p {
     text-align: left;
+    font-family: "Verdana", Verdana, Sans-serif;
 }
