--- a/styles.css
+++ b/styles.css
@@ -33,10 +33,10 @@ li a:hover:not(.active) {
 }
 
 h2 {
-    color: white;
+    color: black;
     font-family: "Arial", Arial, Sans-serif;
     text-align: center;
-    background-color: rgba(80, 168, 175, 1);
+    background-color: rgba(80, 168, 175, 0.5);
 }
 
 p {
