--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,10 @@ p {
     font-family: "Verdana", Verdana, Sans-serif;
     text-align: left;
 }
+
+
+section {
+    float: left;
+    width: 30%;
+    margin: 0 1.5% 24px 1.5%;
+}
