--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,15 @@ section {
     width: 30%;
     margin: 0 1.5% 24px 1.5%;
 }
+
+/* Tablet Landscape */
+@media screen and (max-width: 1060px) {
+    #primary { width:67%; }
+    #secondary { width:30%; margin-left:3%;}  
+}
+
+/* Tablet Portrait */
+@media screen and (max-width: 768px) {
+    #primary { width:100%; }
+    #secondary { width:100%; margin:0; border:none; }
+}
