--- a/styles.css
+++ b/styles.css
@@ -67,11 +67,11 @@ footer {
     font-size: 10px;
     text-align: left;
     color: #9a9a9a;
-    position:fixed;
+    position: absolute;
     float: left;
-    bottom:0;
+    bottom: 0;
     padding: 0.5em 8px;
-    width:17%;
+    width: 17%;
     overflow: auto;
     font-family: "Verdana", Verdana, Sans-serif;
 }
