--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,34 @@
-body {
-    margin: 0;
+html {
     background-color: #eeeeee;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
+
+body {
+    background-color: #eeeeee;
+    float: right;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
     width: 17%;
     background-color: #7a7a7a;
+    min-height: 100%;
     position: fixed;
-    height: 100%;
-    overflow: auto;
+    float: left;
+    padding: 0;
+    margin: 0;
 }
 
 li a {
     display: block;
     color: #FFFFFF;
-    padding: 8px 16px;
+    padding: 4% 6%;
     text-decoration: none;
     font-family: "Verdana", Verdana, Sans-serif;
 }
@@ -50,17 +61,21 @@ h4 {
     text-align: left;
     font-style: bold;
     margin-bottom: 0.2em;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
 }
 
 p {
     font-family: "Verdana", Verdana, Sans-serif;
-    margin-top: 0px;
+    margin-top: 0;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 section {
     float: left;
     width: 30%;
-    margin: 0 1.5% 24px 1.5%;
+    margin: 0 1.5% 1.5% 1.5%;
 }
 
 footer {
@@ -71,7 +86,5 @@ footer {
     float: left;
     bottom: 0;
     padding: 0.5em 0.5em;
-    width: 17%;
-    overflow: auto;
     font-family: "Verdana", Verdana, Sans-serif;
 }
