--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,6 @@ footer {
     position: fixed;
     float: left;
     bottom: 0;
-    padding: 0.5em 0.5em;
+    padding: 0.1% 0.1%;
     font-family: "Verdana", Verdana, Sans-serif;
 }
