--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ html {
     padding: 0;
     margin: 0;
     height: 100%;
+    max-width: 2000px;
 }
 
 body {
@@ -14,33 +15,83 @@ body {
     margin: 0;
 }
 
-ul {
-    list-style-type: none;
-    width: 17%;
-    background-color: #7a7a7a;
-    min-height: 100%;
-    position: fixed;
-    float: left;
-    padding: 0;
-    margin: 0;
+.main {
+    margin-left:17%;
 }
 
-li a {
-    display: block;
-    color: #FFFFFF;
+.sidenav {
+    list-style-type: none;
+    height: 100%;
+    width: 17%;
+    position: fixed;
+    background-color: #7a7a7a;
+}
+
+.sidenav a {
     padding: 4% 6%;
-    text-decoration: none;
+    font-size: 1em;
+    color: #FFFFFF;
+    display: block;
     font-family: "Verdana", Verdana, Sans-serif;
 }
 
-li a.active {
+.sidenav a:hover:not(.active) {
+    background-color: #af5750;
+    color: white;
+}
+
+.sidenav a.active {
     background-color: #50A8AF;
     color: white;
 }
 
-li a:hover:not(.active) {
-    background-color: #af5750;
-    color: white;
+.columns {
+    margin:0% auto;
+    width:100%;
+}
+
+.column {
+    float:left;
+    margin:auto;
+    padding: 1%;
+    width:30%;
+}
+
+.gallery {
+    text-align: center;
+}
+
+.thumbnails img {
+  width: 11%;
+  border: 2px solid #eeeeee;
+}
+
+.thumbnails img:hover {
+  border: 2px solid #af5750;
+  cursor:pointer;
+}
+
+.preview img {
+  width: 70%;
+  text-align: center;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+}
+
+.space {
+    padding-left: 15%;
+    padding-right: 15%;
+}
+
+.video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 h2 {
@@ -77,7 +128,7 @@ a {
 }
 
 footer {
-    font-size: 10px;
+    font-size: 0.6em;
     text-align: left;
     color: #9a9a9a;
     position: fixed;
