--- a/mobile.css
+++ b/mobile.css
@@ -6,6 +6,11 @@ body {
     background-color: #eeeeee;
 }
 
+.mobilenav {
+    display : block;
+    cursor:pointer;
+}
+
 .main {
     width: 100%;
     margin: 0;
@@ -27,7 +32,6 @@ body {
 .sidenav a {
     font-size: 1em;
     color: #FFFFFF;
-    display: block;
     font-family: "Verdana", Verdana, Sans-serif;
 }
 
