--- a/mobile.css
+++ b/mobile.css
@@ -19,7 +19,7 @@ html, body {
 }
 
 .menuItems a {
-    font-size: 1.5em;
+    font-size: large;
     color: #FFFFFF;
     font-family: "Verdana", Verdana, Sans-serif;
     padding: 4% 6%;
@@ -96,14 +96,14 @@ h2 {
     color: black;
     font-family: "Arial", Arial, Sans-serif;
     text-align: center;
-    font-size: 2em;
+    font-size: x-large;
 }
 
 h3 {
     color: black;
     font-family: "Arial", Arial, Sans-serif;
     text-align: center;
-    font-size: 1.75em;
+    font-size: larger;
 }
 
 h4 {
@@ -111,7 +111,7 @@ h4 {
     font-family: "Arial", Arial, Sans-serif;
     text-align: left;
     font-style: bold;
-    font-size: 1.5em;
+    font-size: large;
     margin-bottom: 0.2em;
     margin-left: 1.5%;
     margin-right: 1.5%;
@@ -119,7 +119,7 @@ h4 {
 
 p {
     font-family: "Verdana", Verdana, Sans-serif;
-    font-size: 1.25em;
+    font-size: medium;
     margin-top: 0;
     margin-left: 1%;
     margin-right: 1%;
@@ -130,7 +130,7 @@ a {
 }
 
 footer {
-    font-size: 0.6em;
+    font-size: x-small;
     text-align: left;
     color: #9a9a9a;
     position: fixed;
