--- a/mobile.css
+++ b/mobile.css
@@ -1,5 +1,7 @@
 html, body {
     background-color: #eeeeee;
+    max-width: 1920px;
+    min-width: 40px;
 }
 
 .menuButton {
@@ -16,6 +18,7 @@ html, body {
     background-color: #7a7a7a;
 	height: 100%;
 	width: 100%;
+    max-width: 500px;
 }
 
 .menuItems a {
@@ -56,7 +59,7 @@ html, body {
 }
 
 .thumbnails img {
-  width: 25%;
+  width: 30%;
   border: 2px solid #eeeeee;
 }
 
@@ -136,5 +139,6 @@ footer {
     position: fixed;
     float: left;
     bottom: 0;
+    width: auto;
     font-family: "Verdana", Verdana, Sans-serif;
 }
