--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 html {
     background-color: #eeeeee;
     height: 100%;
-    max-width: 2000px;
+    max-width: 1920px;
+    min-width: 480px
 }
 
 body {
@@ -21,13 +22,13 @@ body {
     list-style-type: none;
     height: 100%;
     width: 17%;
+    max-width: 325px;
     position: fixed;
     background-color: #7a7a7a;
 }
 
 .menuItems a {
     padding: 4% 6%;
-    font-size: 1em;
     color: #FFFFFF;
     display: block;
     font-family: "Verdana", Verdana, Sans-serif;
@@ -132,6 +133,7 @@ footer {
     position: fixed;
     float: left;
     bottom: 0;
+    width: 17%;
     padding: 0.1% 0.1%;
     font-family: "Verdana", Verdana, Sans-serif;
 }
