--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     list-style-type: none;
     height: 100%;
     width: 17%;
-    max-width: 325px;
+/*    max-width: 325px;*/
     position: fixed;
     background-color: #7a7a7a;
 }
