--- a/mobile.css
+++ b/mobile.css
@@ -51,26 +51,23 @@ html, body {
     border: 0;
 }
 
-.gallery {
-    text-align: center;
+.galleria {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    margin: 0;
 }
 
-.thumbnails img {
-  width: 30%;
-  border: 2px solid #eeeeee;
+img {
+    display: block;
+    margin: 0 auto;
 }
 
-.thumbnails img:hover {
-  border: 2px solid #af5750;
-  cursor:pointer;
-}
-
-.preview img {
-    text-align: center;
-    width: 95%;
-    padding-left: 2%;
-    padding-right: 2%;
-}
+#me
+    {
+    width: 80%;"
+    }
 
 .container {
     position: relative;
