--- a/styles.css
+++ b/styles.css
@@ -58,24 +58,23 @@ body {
     width:30%;
 }
 
-.gallery {
-    text-align: center;
+.galleria {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    margin: 0;
 }
 
-.thumbnails img {
-  width: 11%;
-  border: 2px solid #eeeeee;
+img {
+    display: block;
+    margin: 0 auto;
 }
 
-.thumbnails img:hover {
-  border: 2px solid #af5750;
-  cursor:pointer;
-}
-
-.preview img {
-  width: 70%;
-  text-align: center;
-}
+#me
+    {
+    width: 40%;"
+    }
 
 .container {
     position: relative;
@@ -85,8 +84,8 @@ body {
 }
 
 .space {
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .video {
