added design page

--- a/mobile.css
+++ b/mobile.css
@@ -69,6 +69,11 @@ img {
     width: 80%;"
     }
 
+#samplework
+    {
+    width: 85%;"
+    }
+
 .container {
     position: relative;
     width: 100%;
